add manifest file

--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta name="theme-color" content="#ed6606" />
 
     <link rel="stylesheet" href="./style.css" />
+    <link rel="manifest" href="./app.webmanifest" />
+    <link rel="apple-touch-icon" href="./assets/icons/icon_512.png" />
 
-    <title>Quick Notes</title>
+    <title>Quick Note</title>
   </head>
 
   <body>
-    <h1>Quick Notes</h1>
+    <h1>Quick Note</h1>
     <form>
       <textarea placeholder="Enter your new note" class="textarea"></textarea>
       <ul id="toolbar">
