--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="manifest" href="./app.webmanifest" />
     <link rel="apple-touch-icon" href="./assets/icons/icon_512.png" />
 
+    <script src="./sw-registerer.js"></script>
+
     <title>Quick Note</title>
   </head>
 
