--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#ed6606" />
 
     <link rel="stylesheet" href="./style.css" />
+    <link rel="shortcut icon" href="./assets/icons/title.png" type="image/x-icon" />
     <link rel="manifest" href="./app.webmanifest" />
     <link rel="apple-touch-icon" href="./assets/icons/icon_512.png" />
 
